--- a/estilos.scss
+++ b/estilos.scss
@@ -279,15 +279,6 @@ $font2: 'Courier New', Courier, monospace;
 
 // PRODUCTOS
 
-.productos--contenedor{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    gap: 1.5rem;
-    grid-auto-flow: row;
-    padding: 0.5rem 7%;
-}
-
 .productos--titulo{
     text-align: center;
     font-size: 5rem;
@@ -297,7 +288,7 @@ $font2: 'Courier New', Courier, monospace;
     }
 }
 
-.producto--ind{
+.producto-individual{
     flex: 1 1 20rem;
     text-align: center;
     padding: 1rem;
@@ -352,8 +343,17 @@ $font2: 'Courier New', Courier, monospace;
 
 // CARRITO
 
+.carritoTitulo{
+    text-transform: uppercase;
+    font-style: italic;
+}
+
 .titleItem{
     text-transform: uppercase;
+    font-weight: bold;
+}
+
+.cantidadTotal{
     font-weight: bold;
 }
 
@@ -472,16 +472,7 @@ $font2: 'Courier New', Courier, monospace;
 
 // MEDIA QUERIES
 
-@media screen and (max-width: 1200px) {
-    // .productos--contenedor{
-    //     grid-template-columns: 1fr 1fr 1fr;
-    // }
-}
-
 @media screen and (max-width: 992px) {
-    // .productos--contenedor{
-    //     grid-template-columns: 1fr 1fr;
-    // }
     .tarjetas--contenedor{
         grid-template-columns: auto;
         background-color: $color2;
@@ -505,43 +496,8 @@ $font2: 'Courier New', Courier, monospace;
     .header{
         justify-content: space-around !important;
     }
-    .nav--hamburguesa {
-        display: block;
-    }
-    .header--nav {
-        position: fixed;
-        background-color: $color1;
-        width: 100%;
-        height: 100vh;
-        top: 65px;
-        left: -100%;
-        margin: 0;
-        line-height: 50px;
-        text-align: center;
-        align-items: center;
-        transition: all .5s;
-        z-index: 2;
-        flex-direction: column;
-        justify-content: space-evenly;
-        overflow-y: auto;
-        li{
-            display: block;
-            a{
-                font-size: 1.2rem;
-                color: $color4;
-            }
-        }
-    }
-    #menu:checked ~ ul {
-        left: 0;
-    }
-    .banner--descripcion{
-        h2{
-            background-color: rgba(0,0,0,0.20);
-        }
-        p{
-            background-color: rgba(0,0,0,0.20);
-        }
+    .header--nav{
+        display: none;
     }
 }
 
@@ -550,22 +506,16 @@ $font2: 'Courier New', Courier, monospace;
         justify-content: space-evenly;
         padding: 0.5rem 2%;
     }
-    // .template-card{
-    //     grid-template-columns: 1fr 1fr;
-    // }
-    // .producto--ind{
-    //     img {
-    //         height: 125px;
-    //         width: 120px;
-    //     }
-    //     h3{
-    //         font-size: 1.5rem;
-    //     }
-    //     button{
-    //         font-size: 1rem;
-    //     }
-    // }
-    // .producto--precios {
-    //     font-size: 1.5rem;
-    // }
+    .producto-individual{
+        // img {
+        //     height: 125px;
+        //     width: 120px;
+        // }
+        h3{
+            font-size: 1.5rem;
+        }
+        button{
+            font-size: 1rem;
+        }
+    }
 }
