--- a/estilos.scss
+++ b/estilos.scss
@@ -357,6 +357,16 @@ $font2: 'Courier New', Courier, monospace;
     font-weight: bold;
 }
 
+.botonFn{
+    padding: 0.5rem;
+}
+
+.botonCart{
+    padding: 0.4rem;
+    font-size: 1rem;
+}
+
+
 // GALERIA
 
 .galeria {  
