--- a/estilos.css
+++ b/estilos.css
@@ -225,30 +225,6 @@
   margin: 0.625rem;
 }
 
-.botones--contenedor {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-  padding: 1rem 5%;
-  justify-content: center;
-}
-.botones--contenedor button {
-  margin-top: 1rem;
-  padding: 1rem;
-  font-size: 1.5rem;
-  cursor: pointer;
-  border-radius: 0.5rem;
-  background-image: linear-gradient(50deg, #e48f65 50%, transparent 50%);
-  background-position: 100%;
-  background-size: 250%;
-  border-color: #e48f65;
-  text-shadow: 1px 1px 1px black;
-  transition: all 0.5s ease-in-out;
-}
-.botones--contenedor button:hover {
-  background-position: 0;
-}
-
 .productos--titulo {
   text-align: center;
   font-size: 5rem;
@@ -484,6 +460,10 @@
   }
   .producto-individual button {
     font-size: 1rem;
+  }
+
+  .btn {
+    font-size: 0.75rem;
   }
 }
 
